--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "unitcell_project/scrape_scripts/py-rcsbsearchapi"]
 	path = unitcell_project/scrape_scripts/py-rcsbsearchapi
 	url = https://github.com/rcsb/py-rcsbsearchapi.git
+[submodule "unitcell_repo"]
+	path = unitcell_repo
+	url = https://github.com/adamkurth/unitcell_repo.git
