--- a/unitcell_project/.gitignore
+++ b/unitcell_project/.gitignore
@@ -1,10 +1,5 @@
-# .gitignore
-*.hkl
-*.txt
 *.mtz
 *.pdb
-unitcell_project/run_sfall/data/*
-unitcell_project/run_sfall/mtz/*
-unitcell_project/run_sfall/out/*
-unitcell_project/run_sfall/pdb/*
-unitcell_project/scrape_scripts/py-rcsbsearchapi/*
+*.hkl
+run_sfall/out/*
+run_sfall/data/*
